whiteboard/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whiteboard
  namespace: tedy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: whiteboard
  template:
    metadata:
      labels:
        k8s-app: whiteboard
    spec:
      containers:
        - name: whiteboard
          image: rofl256/whiteboard:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "300Mi"
              cpu: "400m"
            requests:
              memory: "200Mi"
              cpu: "100m"
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
