whiteboard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: whiteboard
  namespace: tedy
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    k8s-app: whiteboard
