whiteboard/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: whiteboard
  namespace: tedy
spec:
  rules:
    - host: whiteboard.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: whiteboard
              servicePort: 8080
